# sqlite_wrapper

./: .clang-format  .clang-tidy  CMakeLists.txt  CMakePresets.json  common.cmake  coverage.cmake  static_analysis.cmake  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build.yml
docs/: CMakeLists.txt  README.md
include/sqlite_wrapper/: concepts.h  config.h  create_table.h  error.h  format.h  location.h  raii.h  sqlite_error.h  sqlite_wrapper.h  string.h  tuple_utils.h  with_location.h
sqlite_wrapper/: CMakeLists.txt  sqlite_wrapper.cpp  sqlite_wrapper.h  sqlite_wrapper_create_table.h  sqlite_wrapper_error.cpp  sqlite_wrapper_error.h  sqlite_wrapper_location.h  sqlite_wrapper_raii.cpp  sqlite_wrapper_raii.h
src/: CMakeLists.txt  create_table.cpp  error.cpp  raii.cpp  sqlite_error.cpp  sqlite_wrapper.cpp  sqlite_wrapper_error.cpp  sqlite_wrapper_raii.cpp  string.cpp
test/: .clang-tidy  CMakeLists.txt  assert_throw_msg.h  assert_throw_with_msg.cpp  assert_throw_with_msg.h  assert_throws_with_msg.cpp  assert_throws_with_msg.h  concepts_test.cpp  format_tests.cpp  sqlite_wrapper_tests.cpp  sqlite_wrapper_tests_mocked.cpp  test_runner.cpp  tuple_utils_test.cpp
test/mocks/: CMakeLists.txt  free_function_mock.h  sqlite_mock.cpp  sqlite_mock.h
test/stub_generator/: CMakeLists.txt  stub_generator.cpp
